[package]
name = "pickles"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14"
futures = "0.3"
irc = "0.15"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full", "tracing"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
